# rust-new-array

./: Cargo.toml  README.md
demo/: Cargo.toml
demo/src/: lib.rs  main.rs
src/: generate.rs  lib.rs  parse.rs
